# linear-map-gadt

./: COPYING  README.md  linear-map-gadt.cabal
src/Control/ConstraintKinds/: Category.hs
src/Data/GADT/: LinearMap.hs
